trying to fix bug on iphone showing the number link in the topbar on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -38,7 +38,7 @@
         order: -1;
     }
     #topbar .topbar-phone {
-        display: none;
+        display: none !important;
     }
     @media(max-width: 512px) {
         #gallery .image {
